# data-ingestion

./: .gitignore  CLAUDE.md  lint_errors.txt
kfp/: pyproject.toml
kfp/opl/: elasticsearch_ingest.py  fix_imports.py  html_processing.py  kubeflow_components.py  main.py  main.py.txt  markdown_processing.py  requirements.txt  run.sh
kfp/opl-ingestor/: __init__.py  elasticsearch_ingest.py  html_processing.py  kubeflow_components.py  main.py  markdown_processing.py  opl-injestion-pipeline-elastic.py  opl-injestion-pipeline-elastic_updated.py  requirements.txt  run-pipeline.py  setup.py
kfp/opl/practices/: 1-2-4-all.md  10-for-10.md  155-reports.md  4ls-retrospective.md  6-dimensions-of-discovery.md  abstraction-laddering.md  action-steps.md  aeiou-observation-framework.md  affinity-mapping.md  agile-agenda.md  agile-health-check.md  alternative-worlds.md  an-elephant-in-the-room.md  architectural-decision-records-adr.md  autoscaling.md  backcasting--pre-mortem-premortem.md  backlog-filter.md  backlog-refinement.md  bhags-big-hairy-audacious-goals.md  dollar-100-prioritisation.md
kfp/redhat-product-documentation-ingestor/: ingestion-pipeline-elastic.py  ingestion-pipeline-elastic.py.txt
kfp/website-ingestor/: ingestion-pipeline-website-local.py  website-ingestion-pipeline.py
