[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opl_ingestor"
version = "0.1.0"
description = "Open Practice Library Ingestion Package"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "kfp==2.10.1",
    "elasticsearch>=7.14.0",
    "langchain>=0.1.0",
    "langchain-elasticsearch>=0.1.0",
    "huggingface-hub>=0.17.0",
    "transformers>=4.25.0",
    "torch>=1.10.0",
    "kfp-kubernetes",
    "python-dotenv"
]

[tool.hatch.build.targets.wheel]
packages = ["opl-ingestor"]